--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		  <input type="radio" name="radio" onchange="change('lithium')"/>
 		  Литий
 		</label><br>
-        <p id="lenght">Длина волны</p>
+        <p id="lenght">Длина 111111111111111волны</p>
   </div>
 </div> 
     <canvas id="canvas" width="1280" height="720"></canvas>
