--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="wrap">
-        <p class="170" onclick="goto170()">Линейная кривая</p>
-        <p class="195" onclick="goto195()">Квадратичная кривая</p>
-        <p class="186" onclick="goto186()">Спектры поглощения</p>
-        <p class="176" onclick="goto176()">Постоянная планка</p>
-        <p class="154" onclick="goto154()">Постоянная планка</p>
-        <p class="135" onclick="goto135()">Закон Малюса</p>
-        <p class="004" onclick="goto004()">Дефракционная решетка</p>
+        <p class="170" href="лаба 1.2.doc" download onclick="goto170() ">Линейная кривая</p>
+        <p class="195" href="лаба 1.2.doc" download onclick="goto195()">Квадратичная кривая</p>
+        <p class="186" href="лаба 1.2.doc" download onclick="goto186()">Спектры поглощения</p>
+        <p class="176" href="лаба 4.2.doc" download onclick="goto176()">Постоянная планка</p>
+        <p class="154" href="лаба 5.2.doc" download onclick="goto154()">Постоянная планка</p>
+        <p class="135" href="лаба 7.2.doc" download onclick="goto135()">Закон Малюса</p>
+        <p class="004" href="лаба 6.2.doc" download onclick="goto004()">Дефракционная решетка</p>
     </div>
 <script>
 function goto170() {
