--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="wrap">
-        <p class="170" href="1.2" download onclick="goto170() ">Линейная кривая</p>
-        <p class="195" href="1.2" download onclick="goto195()">Квадратичная кривая</p>
-        <p class="186" href="1.2" download onclick="goto186()">Спектры поглощения</p>
-        <p class="176" href="4.2" download onclick="goto176()">Постоянная планка</p>
-        <p class="154" href="5.2" download onclick="goto154()">Постоянная планка</p>
-        <p class="135" href="7.2" download onclick="goto135()">Закон Малюса</p>
-        <p class="004" href="6.2" download onclick="goto004()">Дефракционная решетка</p>
+        <p class="170"  onclick="goto170() "><a href="1.2" download>Линейная кривая</a></p>
+        <p class="195"  onclick="goto195()"><a href="1.2" download>Квадратичная кривая</a></p>
+        <p class="186"  onclick="goto186()"><a href="1.2" download>Спектры поглощения</a></p>
+        <p class="176"  onclick="goto176()"><a href="4.2" download>Постоянная планка</a></p>
+        <p class="154"  onclick="goto154()"><a href="5.2" download>Постоянная планка</a></p>
+        <p class="135"  onclick="goto135()"><a href="7.2" download>Закон Малюса</a></p>
+        <p class="004"  onclick="goto004()"><a href="6.2" download>Дефракционная решетка</a></p>
     </div>
 <script>
 function goto170() {
